2008-08-25  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu_mfcio.h (mfc_begin_critical_section): New function.
	(mfc_end_critical_section): Likewise.

2008-08-25  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/rs6000/rs6000.c (rs6000_handle_altivec_attribute): Propagate
	all type qualifiers from element type to vector type.

2008-08-25  David Daney  <ddaney@avtrex.com>

	* config/mips/mips.md (immediate_insn): Move up in file, fix
	comment typo, reformat.
	(fetchop_bit, atomic_hiqi_op memory_barrier,
	sync_compare_and_swap<mode>, compare_and_swap_12, sync_add<mode>,
	sync_<optab><mode>, sync_<optab>_12, sync_old_<optab><mode>,
	sync_old_<optab>_12, sync_new_<optab><mode>, sync_new_<optab>_12,
	sync_nand<mode>, sync_nand_12, sync_old_nand<mode>,
	sync_old_nand_12, sync_new_nand<mode>, sync_new_nand_12,
	sync_sub<mode>, sync_old_add<mode>, sync_old_sub<mode>,
	sync_new_add<mode>, sync_new_sub<mode>, sync_<optab><mode>,
	sync_old_<optab><mode>, sync_new_<optab><mode>, sync_nand<mode>,
	sync_old_nand<mode>, sync_new_nand<mode>,
	sync_lock_test_and_set<mode>, sync_lock_test_and_set<mode>,
	test_and_set_12): Moved to sync.md.
	(sync.md): Include.
	* config/mips/sync.md: New file.

2008-08-25  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (def_cfa_1): Don't scale by DWARF_CIE_DATA_ALIGNMENT.
	(regsave): Likewise.
	(lookup_cfa_1): Don't rescale by DWARF_CIE_DATA_ALIGNMENT.
	(output_cfi_directive): Likewise.
	(div_data_align): New.
	(output_cfi): Use it.

2008-08-24  Adam Nemet  <anemet@caviumnetworks.com>

	* config.gcc (mips64*-*-linux*): Handle mips64octeon*-*-linux*.
	* config/mips/mips.h (enum processor_type): Add PROCESSOR_OCTEON.
	(TARGET_OCTEON): New macro.
	(TARGET_CPU_CPP_BUILTINS): Define __OCTEON__ for Octeon.
	(MIPS_ISA_LEVEL_SPEC, MIPS_ARCH_FLOAT_SPEC): Handle -march=octeon.
	(ISA_HAS_POP): New macro.
	* config/mips/driver-native.c (host_detect_local_cpu): Handle
	Octeon.