@@ -2128,8 +2128,11 @@ optimization_options (int level ATTRIBUTE_UNUSED, int size ATTRIBUTE_UNUSED)
 
   /* Enable section anchors by default.
      Skip section anchors for Objective C and Objective C++
-     until front-ends fixed.  */
-  if (!TARGET_MACHO && lang_hooks.name[4] != 'O')
+     until front-ends fixed.
+     Do not enable section anchors without toplevel reorder.  */
+  if (!TARGET_MACHO
+      && lang_hooks.name[4] != 'O'
+      && flag_toplevel_reorder != 0)
     flag_section_anchors = 2;
 }
 
